---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : array 1..2, 3..4 of int\nvar _ := a(1,2,3,4)"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), range of `int` (Unevaluated(LibraryId(0), BodyId(2)) .. Expr(Unevaluated(LibraryId(0), BodyId(3)), Yes)), ) of int
"_"@(FileId(1), 36..37) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 41..42: expected 2 arguments, found 4
| error in file FileId(1) for 41..42: subscript has 2 extra arguments
